Setup completed: Tesla Stock Analysis Platform

--- a/analysis_notebook.ipynb
+++ b/analysis_notebook.ipynb
@@ -113,6 +113,24 @@
     "except ImportError:\n",
     "    print(\"PyTorch not installed\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "128d9c33",
+   "metadata": {},
+   "source": [
+    "# Activating Conda Environment\n",
+    "\n",
+    "To activate the Conda environment, use the following command:\n",
+    "```bash\n",
+    "conda activate tesla-analysis\n",
+    "```\n",
+    "\n",
+    "If you encounter issues like `command not found`, ensure Conda is installed and added to your PATH. Alternatively, use:\n",
+    "```bash\n",
+    "source ~/miniconda3/bin/activate tesla-analysis\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
