Setup completed: Tesla Stock Analysis Platform

--- a/analysis_notebook.ipynb
+++ b/analysis_notebook.ipynb
@@ -131,6 +131,37 @@
     "source ~/miniconda3/bin/activate tesla-analysis\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ad5a34c",
+   "metadata": {},
+   "source": [
+    "# Troubleshooting `.bat` File Execution Issues\n",
+    "\n",
+    "If `.bat` files fail to execute with errors like `CommandNotFoundException`, ensure the following:\n",
+    "1. Verify the file exists in the specified path.\n",
+    "2. Check if the file is executable by running:\n",
+    "   ```cmd\n",
+    "   dir .\\startup.bat\n",
+    "   ```\n",
+    "3. Ensure the current directory is correct. Use:\n",
+    "   ```cmd\n",
+    "   cd C:\\Users\\Hasib\\Projects\\tesla-stock-analysis\n",
+    "   ```\n",
+    "4. If the issue persists, try running the file explicitly with `cmd`:\n",
+    "   ```cmd\n",
+    "   cmd /c .\\startup.bat\n",
+    "   ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f5eb80",
+   "metadata": {},
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
